--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
         "ecmaVersion": "latest"
     },
     "rules": {
-        "linebreak-style":"off"
+        "linebreak-style":"off",
+        "no-underscore-dangle":"off",
+        "class-methods-use-this":"off"
     }
 }
